inserindo epocas na variavel de ambiente

--- a/models/collab.env
+++ b/models/collab.env
@@ -4,3 +4,5 @@ MASKS_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/raw/d
 PREPROCESSED_DATA_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/preprocessed_data/CLAHE"
 
 BACKBONE = "resnet34"
+
+EPOCHS = 5
