--- a/models/collab.env
+++ b/models/collab.env
@@ -5,4 +5,4 @@ PREPROCESSED_DATA_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassif
 
 BACKBONE = "resnet34"
 
-EPOCHS = 5
+EPOCHS = "5"
