alterando o modelo para obeter as imagens por meio dos CSVs

--- a/models/collab.env
+++ b/models/collab.env
@@ -1,8 +1,10 @@
-TRAIN_IMAGES_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/raw/dataset/xrays/train"
-MASKS_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/raw/dataset/masks/ETT"
-
-PREPROCESSED_DATA_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/preprocessed_data/CLAHE"
+TRAIN_CSV_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/labels/train_mask.csv"
+TEST_CSV_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/labels/test_mask.csv"
 
 BACKBONE = "resnet34"
 
 EPOCHS = "5"
+
+BATCH_SIZE = "4"
+
+IMAGE_SIZE = "384"
