--- a/collab.env
+++ b/collab.env
@@ -1,6 +1,6 @@
 TRAIN_CSV_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/labels/train_mask.csv"
 TEST_CSV_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/labels/test_mask.csv"
-RESULT_TRAIN_PATH = "train/results/"
+RESULT_TRAIN_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/trainresults"
 BACKBONE = "resnet34"
 
 EPOCHS = "5"
