--- a/collab.env
+++ b/collab.env
@@ -1,7 +1,10 @@
 TRAIN_CSV_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/labels/train_mask.csv"
 TEST_CSV_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/data/labels/test_mask.csv"
 RESULT_TRAIN_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/trainresults"
+MODEL_TRAIN_PATH = "/content/drive/MyDrive/Colab Notebooks/CatheterClassify/trainresults/2024_04_19_12_37_18_PM/best_segmentation_model.h5"
+
 BACKBONE = "resnet34"
+
 
 EPOCHS = "5"
 
